# Math

./: .gitignore  CMakeLists.txt  vcpkg.json
Math/: CMakeLists.txt  vcpkg.json
Math/include/Math/Algebra/: Polynomial.h
Math/include/Math/Calculus/Integration/: Integrator.h
Math/include/Math/Calculus/ODESolvers/: EulerSolver.h  IODESolver.h
Math/include/Math/Geometry/: ConvexHull.h  Line.h  Line.tpp  Matrix.h  Matrix.tpp  Point.h  Point.tpp  Utils.h  Vector.tpp
Math/include/Math/Linear/: BandMatrix.h  DVector.h  DenseMatrix.h  IMatrix.h  SparseMatrix.h
Math/include/Math/Linear/Decompositioners/: CholeskyDecompositioner.h  SVDDecompositioner.tpp
Math/include/Math/Linear/Solvers/: CGSystemSolver.h  ConvergenceCriterion.h  GMRESSystemSolver.h  GaussSystemSolver.h
Math/include/Math/Linear/Solvers/Interfaces/: IConvergenceCriterion.h  IIterativeLinearSystemSolver.h  IKrylovTypeLinearSystemSolver.h  ILinearSystemSolver.h
Math/include/Math/Linear/Solvers/Preconditioners/: IPreconditioner.h  MGPreconditioner.h
Math/include/Math/Optimization/: ConstrainedOptimizer.h  LinearProgramming.h  SimplexSolver.h
Math/include/Math/Statistics/: Histogram.h  MeanVariance.h
Math/include/Math/Statistics/Distributions/: NormalDistribution.h
Math/source/Algebra/: Polynomial.cpp
Math/source/Calculus/: Differentiation.h
Math/source/Calculus/Integration/: Integrator.cpp
Math/source/Calculus/ODESolvers/: EulerSolver.cpp  RungeKuttaSolver.cpp
Math/source/Geometry/: ConvexHull.cpp  Intersections.cpp  Plane.cpp  Utils.cpp
Math/source/Linear/: AnyMatrix.cpp  BandMatrix.cpp  DVector.cpp  DenseMatrix.cpp  IMatrix.cpp  IMatrixFromVector.cpp  SparseMatrix.cpp
Math/source/Linear/Solvers/: BiCGSTABSystemSolver.cpp  CGSystemSolver.cpp  FGMRESSystemSolver.cpp  GMRESSystemSolver.cpp  GaussSystemSolver.cpp  MINRESSystemSolver.cpp  SORSystemSolver.cpp
Math/source/Linear/Solvers/Interfaces/: IIterativeLinearSystemSolver.cpp  IKrylovTypeLinearSystemSolver.cpp  ILinearSystemSolver.cpp
Math/source/Linear/Solvers/Preconditioners/: ILUPreconditioner .cpp  JacobiPreconditioner.cpp  MGPreconditioner.cpp
Math/tests/modules/: Test.cmake
Math/tests/sources/: Common.h
Math/tests/sources/Linear/: Linear.h  Linear.tpp  tests.cpp
Patterns/: CMakeLists.txt
Patterns/include/Patterns/: EventDispatcher.h  Factory.h  ItemWithID.h  NonCopyable.h  Singleton.h  ThreadSafeFactory.h  ThreadSafeSingleton.h
Patterns/source/: ItemWithID.cpp
Threads/: .gitignore  CMakeLists.txt
Threads/include/Threads/: Barrier.h  BlockingQueue.h  BlockingQueue.tpp  CallbackQueue.h  Connection.h  Connection.tpp  ICallbackQueue.h  ICallbackQueue.tpp  IStoppableCallbackQueue.h  ITimersFactory.h  TimersFactory.h  WaitList.h
Threads/source/: Barrier.cpp  CallbackQueue.cpp  ITimersFactory.cpp  TimersFactory.cpp  WaitList.cpp
Threads/tests/: CMakeLists.txt
include/Utils/Math/: Common.h
include/Utils/Math/Algebra/: Polynomial.h
include/Utils/Math/Calculus/: Differentiation.h
include/Utils/Math/Geometry/: IVector.h  Intersections.h  Matrix.h  Matrix.tpp  Plane.h  Point.h  Polygon.h  Utils.h  Vector.h
include/Utils/Math/Linear/: AnyMatrix.h  BandMatrix.h  DVector.h  DenseMatrix.h  IMatrix.h  IMatrixFromVector.h  SparseMatrix.h
include/Utils/Math/Optimization/: GradientDescent.h  LinearProgramming.h  NewtonMethod.h
include/Utils/Math/Statistics/: RandomSampling.h
include/Utils/Patterns/: FactoryChain.h  ItemWithID.h
include/Utils/Threads/: Barrier.h  BlockingQueue.h  BlockingQueue.tpp  CallbackQueue.h  Connection.h  Connection.tpp  ICallbackQueue.h  ICallbackQueue.tpp  IStoppableCallbackQueue.h  ITimersFactory.h  TimersFactory.h  WaitList.h
source/: Main.cpp
source/Math/: CMakeLists.txt
source/Math/Algebra/: Polynomial.cpp
source/Math/Geometry/: ConvexHull.cpp  Intersections.cpp  Plane.cpp  Utils.cpp
source/Math/Linear/: AnyMatrix.cpp  BandMatrix.cpp  DVector.cpp  DenseMatrix.cpp  IMatrix.cpp  IMatrixFromVector.cpp  SparseMatrix.cpp
source/Math/Linear/Solvers/: BiCGSTABSystemSolver.cpp  CGSystemSolver.cpp  FGMRESSystemSolver.cpp  GMRESSystemSolver.cpp  GaussSystemSolver.cpp  MINRESSystemSolver.cpp  SORSystemSolver.cpp
source/Math/Linear/Solvers/Interfaces/: IIterativeLinearSystemSolver.cpp  IKrylovTypeLinearSystemSolver.cpp  ILinearSystemSolver.cpp
source/Math/Linear/Solvers/Preconditioners/: ILUPreconditioner .cpp  JacobiPreconditioner.cpp  MGPreconditioner.cpp
source/Patterns/: CMakeLists.txt
source/Tests/: Common.h
source/Tests/Math/: LinearTests.cpp  LinearTests.h  LinearTests.hpp
source/Threads/: Barrier.cpp  CMakeLists.txt  CallbackQueue.cpp  ITimersFactory.cpp  TimersFactory.cpp  WaitList.cpp
source/Utils/Math/: Common.h  Constants.h
source/Utils/Math/Algebra/: Polynomial.cpp  Polynomial.h
source/Utils/Math/Calculus/: Differentiation.h
source/Utils/Math/Geometry/: ConvexHull.cpp  ConvexHull.h  Intersections.cpp  Intersections.h  Line.cpp  Line.h  Line.hpp  Matrix.h  Matrix.hpp  Plane.cpp  Plane.h  Point.cpp  Point.h  Point.hpp  Polygon.h  Utils.cpp  Utils.h  Utils.hpp  Vector.cpp  Vector.h  Vector.hpp
source/Utils/Math/Linear/: AnyMatrix.cpp  AnyMatrix.h  BandMatrix.cpp  BandMatrix.h  DVector.cpp  DVector.h  DenseMatrix.cpp  DenseMatrix.h  FVector.cpp  FVector.h  IMatrix.cpp  IMatrix.h  IMatrixFromVector.cpp  IMatrixFromVector.h  SparseMatrix.cpp  SparseMatrix.h
source/Utils/Math/Optimization/: ConstrainedOptimizer.h  GradientDescent.h  SimplexSolver.h
source/Utils/Math/Statistics/: Histogram.h  MeanVariance.h  RandomSampling.h
source/Utils/Patterns/: Builder.h  MoveOnlyBase.h  Observer.h  Singleton.h  ThreadSafeSingleton.h
source/Utils/Threads/: Barrier.cpp  Barrier.h  BlockingQueue.h  BlockingQueue.hpp  CallbackQueue.cpp  Connection.h  ICallbackQueue.h  ICallbackQueue.hpp  ITimersFactory.cpp  ITimersFactory.h  TimersFactory.cpp  TimersFactory.h  WaitList.cpp
tests/sources/Math/Linear/: Linear.cpp  Linear.h
workdir/: diff_isl_test.txt  diff_sizes_test.txt  diff_sparsity_test.txt  one_random_test.txt
(+57 files in other folders)
